--- a/index.html
+++ b/index.html
@@ -50,14 +50,5 @@
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
-
- <script>
-const toggleButton = document.getElementById('toggle-button');
-const collapsableNav = document.getElementById('collapsable-nav');
-
-toggleButton.addEventListener('click', () => {
-  collapsableNav.classList.toggle('show');
-});
-</script>
-
 </body>
+</html>
