--- a/index.html
+++ b/index.html
@@ -50,5 +50,14 @@
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
+	
+<script>
+  const toggleButton = document.querySelector('#toggle-button');
+  const collapsableNav = document.querySelector('#collapsable-nav');
+
+  toggleButton.addEventListener('click', () => {
+    collapsableNav.style.display = collapsableNav.style.display === 'none' ? 'block' : 'none';
+  });
+</script>
 </body>
 </html>
