--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Food, LLC</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="css/styles.css">
 	<link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <header>
-    <nav id="header-nav" class="navbar navbar-expand-md navbar-default">
+    <nav id="header-nav" class="navbar navbar-expand-sm navbar-default">
         <div class="container">
             <a href="index.html" class="navbar-brand">
                 <h1>Food, LLC</h1>
             </a>
-            <button id="toggle-button" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <button id="toggle-button" type="button" class="visible-xs navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
   <span class="icon-bar"></span>
   <span class="icon-bar"></span>
   <span class="icon-bar"></span>
@@ -38,6 +38,7 @@
         </div>
     </nav>
 </header>
+
 <style>
   </style>
   <div class="row">
